# rSIDlet

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README_en.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  sycnwiki.yml
docs/: Home.md  SIDlet-manpage-en.md  SIDlet-manpage.md  rSIDlet-crate-guide-en.md  rSIDlet-crate-guide.md
src/: download.rs  lib.rs  main.rs  paths.rs  utils.rs
src/chilet/: hzk.rs  mod.rs  vector.rs
src/commands/: info.rs  install.rs  list.rs  mod.rs  test.rs
src/figfont/: control.rs  fig.rs  mod.rs  toi.rs
tests/: smoke_tests.rs
